--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -56,7 +56,7 @@ TERM = "xterm-256color"
 WINIT_X11_SCALE_FACTOR = "1.40"
 
 [font]
-size = 10.0
+size = 13.0
 
 [font.normal]
 family = "FiraCode Nerd Font"
@@ -64,6 +64,7 @@ style = "Regular"
 
 [window]
 opacity = 0.8
+padding = { x = 8, y = 8 }
 
 [cursor]
 unfocused_hollow = true
