--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g status-right-length 30 # max size
 set -g status-left ''
 # inactive window
 set -g window-status-format ' #I #W '
-set -g window-status-current-format '#[reverse] #I #W #[noreverse]'
+set -g window-status-current-format '#[reverse]#I #W#[noreverse]'
 set -g window-status-last-style 'bold'
 set -g window-status-current-style 'bg=default fg=#a89984,bold'
 # display pane colors (shown with `C-b q`)
