feat(hyprland): add hy3 to mimic i3

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,15 +3,15 @@ $mod = SUPER
 $terminal = alacritty
 
 $fg = rgb(d5c4a1)
-$bg = rgb(282828)
-$yellow = rgb(d79921)
+$bg = rgba(000000cc)
+$red = rgb(cc241d)
 
 general {
-    gaps_in = 4
-    gaps_out = 8
-    float_gaps = 8
+    gaps_in = 0
+    gaps_out = 0
+    float_gaps = 20, 0, 0, 0
 
-    border_size = 2
+    border_size = 1
 
     col.active_border = $fg
     col.inactive_border = $bg
@@ -20,18 +20,18 @@ general {
 
     allow_tearing = false
 
-    layout = dwindle
+    layout = hy3
 }
 
 decoration {
-    rounding = 16
+    rounding = 0
 
     shadow {
         enabled = false
     }
 
     blur {
-        enabled = false 
+        enabled = false
     }
 }
 
@@ -51,10 +51,48 @@ misc {
 
 binds {
     allow_pin_fullscreen = true
+    scroll_event_delay = 50
 }
 
 ecosystem {
     no_donation_nag = true
+}
+
+plugin {
+    hy3 {
+        tab_first_window = true
+
+        tabs {
+            height = 20
+            padding = 0
+            radius = 0
+            border_width = 1
+            text_height = 10
+            text_padding = 0
+            blur = false
+
+            # active tab bar segment colors
+            col.active = $fg
+            col.active.border = $fg
+            col.active.text = $bg
+            # active tab bar segment colors for bars on an unfocused monitor
+            col.active_alt_monitor = $bg
+            col.active_alt_monitor.border = $fg
+            col.active_alt_monitor.text = $fg
+            # focused tab bar segment colors (focused node in unfocused container)
+            col.focused = $bg
+            col.focused.border = $fg
+            col.focused.text = $fg
+            # inactive tab bar segment colors
+            col.inactive = $bg
+            col.inactive.border = $bg
+            col.inactive.text = $fg
+            # urgent tab bar segment colors
+            col.urgent = $red
+            col.urgent.border = $red
+            col.urgent.text = $bg
+        }
+    }
 }
 
 ############################################################
@@ -71,27 +109,33 @@ bind = $mod, Q, killactive,
 bind = $mod SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 
 # layout
-bind = $mod, f, exec, hyprctl dispatch fullscreen 1 toggle; pkill -SIGRTMIN+10 waybar
-bind = $mod SHIFT, f, exec, hyprctl dispatch fullscreen 0 toggle; pkill -SIGRTMIN+10 waybar
-bind = $mod, space, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled hist || hyprctl dispatch cyclenext floating
+bind = $mod, f, fullscreen, 0, toggle
+bind = $mod, space, hy3:togglefocuslayer
 bind = $mod SHIFT, space, togglefloating
 bind = $mod SHIFT, p, pin
+bind = $mod, b, hy3:makegroup, h
+bind = $mod, v, hy3:makegroup, v
+bind = $mod, t, hy3:changegroup, toggletab
+bind = $mod SHIFT, b, hy3:changegroup, h
+bind = $mod SHIFT, v, hy3:changegroup, v
+bind = $mod, a, hy3:changefocus, raise
+bind = $mod, z, hy3:changefocus, lower
 
 # Move focus
-bind = $mod, h, movefocus, l
-bind = $mod, l, movefocus, r
-bind = $mod, k, movefocus, u
-bind = $mod, j, movefocus, d
-bind = $mod, left, movefocus, l
-bind = $mod, right, movefocus, r
-bind = $mod, up, movefocus, u
-bind = $mod, down, movefocus, d
+bind = $mod, h, hy3:movefocus, l
+bind = $mod, l, hy3:movefocus, r
+bind = $mod, k, hy3:movefocus, u
+bind = $mod, j, hy3:movefocus, d
+bind = $mod, left, hy3:movefocus, l
+bind = $mod, right, hy3:movefocus, r
+bind = $mod, up, hy3:movefocus, u
+bind = $mod, down, hy3:movefocus, d
 
 # move window
-bind = $mod SHIFT, h, movewindow, l
-bind = $mod SHIFT, l, movewindow, r
-bind = $mod SHIFT, k, movewindow, u
-bind = $mod SHIFT, j, movewindow, d
+bind = $mod SHIFT, h, hy3:movewindow, l
+bind = $mod SHIFT, l, hy3:movewindow, r
+bind = $mod SHIFT, k, hy3:movewindow, u
+bind = $mod SHIFT, j, hy3:movewindow, d
 bind = $mod SHIFT, left, movewindow, l
 bind = $mod SHIFT, right, movewindow, r
 bind = $mod SHIFT, up, movewindow, u
@@ -170,7 +214,10 @@ bindl = $mod ALT, mouse_up, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 # music control
 bindl = $mod ALT, period, exec, mpc next; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, comma, exec, mpc prev; pkill -SIGRTMIN+11 waybar
+bindl = $mod ALT, mouse_right, exec, mpc next; pkill -SIGRTMIN+11 waybar
+bindl = $mod ALT, mouse_left, exec, mpc prev; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, j, exec, mpc toggle; pkill -SIGRTMIN+11 waybar
+bindl = $mod ALT, mouse:274, exec, mpc toggle; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, bracketleft, exec, mpc seek -10
 bindl = $mod ALT, bracketright, exec, mpc seek +10
 
@@ -179,10 +226,10 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # desktop zoom
-bind = $mod SHIFT, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 + 1}')
-bind = $mod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 - 1}')
-bind = $mod SHIFT, equal, exec, hyprctl keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 + 1}')
-bind = $mod SHIFT, minus, exec, hyprctl keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor | awk '/^float.*/ {print $2 - 1}')
+bind = $mod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
+bind = $mod SHIFT, mouse_down, exec, hyprctl keyword cursor:zoom_factor 3
+bind = $mod SHIFT, minus, exec, hyprctl keyword cursor:zoom_factor 1
+bind = $mod SHIFT, equal, exec, hyprctl keyword cursor:zoom_factor 3
 
 bind = $mod, x, exec, hyprshot -m region --silent --clipboard-only
 bind = $mod SHIFT, x, exec, hyprshot -m output --silent --clipboard-only
@@ -235,6 +282,7 @@ windowrule = workspace 3, class:^(firefox)$
 windowrule = float, class:^(firefox)$, title:^(Picture-in-Picture)$
 windowrule = pin, class:^(firefox)$, title:^(Picture-in-Picture)$
 windowrule = workspace 6, class:^(org.telegram.desktop)$
+windowrule = float, fullscreen, class:^(org.telegram.desktop)$, title:^(Media viewer)$
 windowrule = workspace 7, class:^(MongoDB Compass)$
 windowrule = workspace 8, class:^(Postman)$
 windowrule = workspace 8, class:^(Altair GraphQL Client)$
@@ -268,3 +316,4 @@ exec-once = ~/bin/rw
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = gammastep &
 exec-once = ~/bin/xdg-hyprland-starter
+exec-once = hyprpm reload -n
