--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,21 +4,21 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 # customize status line
 # default for bg makes it transparent
-set -g status-style 'bg=default fg=#a89984'
+set -g status-style 'bg=default fg=#d5c4a1'
 set -g status-right ' #S '
 set -g status-right-length 30 # max size
 set -g status-left ''
 # inactive window
 set -g window-status-format ' #I #W '
-set -g window-status-current-format '#[reverse]#I #W#[noreverse]'
+set -g window-status-current-format '#[reverse] #I #W #[noreverse]'
 set -g window-status-last-style 'bold'
-set -g window-status-current-style 'bg=default fg=#a89984,bold'
+set -g window-status-current-style 'bg=default fg=#d5c4a1,bold'
 # display pane colors (shown with `C-b q`)
-set -g display-panes-colour '#a89984'
-set -g display-panes-active-colour '#d79921'
+set -g display-panes-colour '#d5c4a1'
+set -g display-panes-active-colour '#d5c4a1'
 # pane border colors
 set -g pane-border-style 'fg=#282828'
-set -g pane-active-border-style 'fg=#d79921'
+set -g pane-active-border-style 'fg=#d5c4a1'
 
 # reload tmux config
 bind-key r source-file ~/.tmux.conf
@@ -27,7 +27,7 @@ bind-key r source-file ~/.tmux.conf
 set -g base-index 1
 
 # set longer history size for panes
-set -g history-limit 5000
+set -g history-limit 10000
 
 # automatically re-number windows when gaps appear between them
 set -g renumber-windows on
