--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -9,19 +9,18 @@
     "~/.config/waybar/modules/custom/mpd.jsonc",
     "~/.config/waybar/modules/custom/date.jsonc",
     "~/.config/waybar/modules/custom/jdate.jsonc",
-    "~/.config/waybar/modules/custom/fullscreen.jsonc",
   ],
 
   "layer": "bottom", // will hide bar if window is full-screen & is transparent
-  "position": "top",
+  "position": "bottom",
   "height": 0,
-  "spacing": 8,
+  "spacing": 0,
   "padding": 0,
-  "margin-top": 8,
-  "margin-right": 8,
+  "margin-top": 0,
+  "margin-right": 0,
   "margin-bottom": 0,
-  "margin-left": 8,
-  "modules-left": ["hyprland/workspaces", "custom/fullscreen"],
+  "margin-left": 0,
+  "modules-left": ["hyprland/workspaces"],
   "modules-right": [
     "custom/mpd",
     "hyprland/language",
