feat(waybar): simplify design & add remaining modules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,7 +60,7 @@ ecosystem {
 
 plugin {
     hy3 {
-        tab_first_window = true
+        no_gaps_when_only = 1
 
         tabs {
             height = 20
@@ -225,6 +225,9 @@ bindl = $mod ALT, bracketright, exec, mpc seek +10
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
+# ip location renewal
+bind = $mod ALT, l, exec, pkill -SIGRTMIN+9 waybar
+
 # desktop zoom
 bind = $mod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
 bind = $mod SHIFT, mouse_down, exec, hyprctl keyword cursor:zoom_factor 3
@@ -239,7 +242,7 @@ bind = $mod ALT, x, exec, hyprshot -m region --silent -o ~/Pictures
 bind = $mod CTRL, space, exec, dunstctl close
 bind = $mod CTRL SHIFT, space, exec, dunstctl history-pop
 bind = $mod CTRL, Return, exec, dunstctl action
-bind = $mod CTRL ALT, space, exec, dunstctl set-paused toggle; exec pkill -SIGRTMIN+11 i3blocks
+bind = $mod CTRL ALT, space, exec, dunstctl set-paused toggle; exec pkill -SIGRTMIN+10 waybar
 
 # menus
 bind = $mod, o, exec, $terminal --class macro-menu -e ~/bin/macro
