feat: remove starship prompt generator

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,6 +44,10 @@ input {
     kb_options = grp:caps_toggle
 }
 
+cursor {
+    no_warps = true
+}
+
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering  = true
@@ -60,8 +64,6 @@ ecosystem {
 
 plugin {
     hy3 {
-        no_gaps_when_only = 1
-
         tabs {
             height = 20
             padding = 0
