feat: nuke emacs & doom

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ misc {
 
 binds {
     allow_pin_fullscreen = true
-    scroll_event_delay = 50
+    scroll_event_delay = 10
 }
 
 ecosystem {
@@ -220,8 +220,8 @@ bindl = $mod ALT, mouse_right, exec, mpc next; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, mouse_left, exec, mpc prev; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, j, exec, mpc toggle; pkill -SIGRTMIN+11 waybar
 bindl = $mod ALT, mouse:274, exec, mpc toggle; pkill -SIGRTMIN+11 waybar
-bindl = $mod ALT, bracketleft, exec, mpc seek -10
-bindl = $mod ALT, bracketright, exec, mpc seek +10
+bindl = $mod ALT, bracketleft, exec, mpc seek -10; pkill -SIGRTMIN+11 waybar
+bindl = $mod ALT, bracketright, exec, mpc seek +10; pkill -SIGRTMIN+11 waybar
 
 # brightness
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -233,8 +233,9 @@ bind = $mod ALT, l, exec, pkill -SIGRTMIN+9 waybar
 # desktop zoom
 bind = $mod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
 bind = $mod SHIFT, mouse_down, exec, hyprctl keyword cursor:zoom_factor 3
-bind = $mod SHIFT, minus, exec, hyprctl keyword cursor:zoom_factor 1
-bind = $mod SHIFT, equal, exec, hyprctl keyword cursor:zoom_factor 3
+gesture = 3, up, dispatcher, exec, hyprctl keyword cursor:zoom_factor 3
+gesture = 3, down, dispatcher, exec, hyprctl keyword cursor:zoom_factor 1
+
 
 bind = $mod, x, exec, hyprshot -m region --silent --clipboard-only
 bind = $mod SHIFT, x, exec, hyprshot -m output --silent --clipboard-only
@@ -247,13 +248,13 @@ bind = $mod CTRL, Return, exec, dunstctl action
 bind = $mod CTRL ALT, space, exec, dunstctl set-paused toggle; exec pkill -SIGRTMIN+10 waybar
 
 # menus
+bind = $mod, d, exec, $terminal --class launcher-menu -e sh -c 'j4-dmenu-desktop --no-exec --dmenu=fzf | xargs -I{} hyprctl dispatch "exec {}"'
 bind = $mod, o, exec, $terminal --class macro-menu -e ~/bin/macro
 bind = $mod, e, exec, $terminal --class emoji-menu -e ~/bin/emoji-picker
 bind = $mod ALT, q, exec, $terminal --class qalculate-terminal -e qalc
 
 # apps
 bind = $mod, p, exec, copyq show
-bind = $mod ALT, s, exec, emacs
 bind = $mod ALT, f, exec, firefox
 bind = $mod ALT, e, exec, thunar
 bind = $mod ALT, t, exec, Telegram
@@ -281,6 +282,7 @@ windowrule = float, class:^(macro-menu)$
 windowrule = float, class:^(emoji-menu)$
 windowrule = float, class:^(qalculate-terminal)$
 windowrule = float, class:^(com.github.hluk.copyq)$
+windowrule = float, class:^(launcher-menu)$
 windowrule = workspace 1, class:^(xvpn)$
 windowrule = workspace 2, class:^(markdown-notes)$
 windowrule = workspace 3, class:^(firefox)$
@@ -306,6 +308,7 @@ env = XDG_SESSION_TYPE,wayland
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = ELECTRON_OZONE_PLATFORM_HINT,auto # hint to avoid using xwayland for electron apps
+env = NVD_BACKEND,direct
 
 ############################################################
 # AUTOSTART
