feat: add break-timer

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,7 +263,8 @@ bind = $mod ALT, p, exec, postman
 bind = $mod CTRL, c, exec, ~/bin/clocks
 bind = $mod ALT, Return, exec, $terminal -e lf
 bind = $mod ALT, n, exec, $terminal --class markdown-notes -e t
-bind = $mod ALT SHIFT, t, exec, $terminal --class fitimer -e fitimer
+bind = $mod ALT SHIFT, t, exec, systemctl --user start break-timer.service; pkill -SIGRTMIN+8 waybar
+bind = $mod CTRL ALT SHIFT, t, exec, systemctl --user stop break-timer.service; pkill -SIGRTMIN+8 waybar
 bind = $mod ALT, h, exec, ~/builds/Hubstaff/HubstaffClient.bin.x86_64
 bind = $mod ALT, v, exec, $terminal --class xvpn -e sudo xvpn ui
 bind = $mod ALT, d, exec, XDG_CURRENT_DESKTOP=GNOME /home/mazhar/builds/mongodb-compass/MongoDB\ Compass
