fix: use aur for installing mongodb compass

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -267,7 +267,7 @@ bind = $mod ALT SHIFT, t, exec, systemctl --user start break-timer.service; pkil
 bind = $mod CTRL ALT SHIFT, t, exec, systemctl --user stop break-timer.service; pkill -SIGRTMIN+8 waybar
 bind = $mod ALT, h, exec, ~/builds/Hubstaff/HubstaffClient.bin.x86_64
 bind = $mod ALT, v, exec, $terminal --class xvpn -e sudo xvpn ui
-bind = $mod ALT, d, exec, XDG_CURRENT_DESKTOP=GNOME /home/mazhar/builds/mongodb-compass/MongoDB\ Compass
+bind = $mod ALT, d, exec, XDG_CURRENT_DESKTOP=GNOME mongodb-compass
 bind = $mod ALT, b, exec, $terminal -e btm
 bind = $mod ALT, o, exec, /opt/oblivion-desktop/oblivion-desktop --no-sandbox --gtk-version=3
 
