feat: optimize treesitter text objects

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -7,6 +7,7 @@
   <prefer>
    <family>Noto Sans</family>
    <family>Vazirmatn</family>
+   <family>Symbols Nerd Font</family>
    <family>Noto Color Emoji</family>
   </prefer>
  </alias>
@@ -15,6 +16,7 @@
   <family>serif</family>
   <prefer>
    <family>Noto Serif</family>
+   <family>Symbols Nerd Font</family>
    <family>Noto Color Emoji</family>
   </prefer>
  </alias>
@@ -22,8 +24,10 @@
  <alias>
   <family>monospace</family>
   <prefer>
+   <family>FiraCode Nerd Font</family>
    <family>Noto Sans Mono</family>
    <family>Noto Color Emoji</family>
+   <family>Symbols Nerd Font</family>
   </prefer>
  </alias>
 
