--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,6 +46,7 @@ input {
 
 cursor {
     no_warps = true
+    zoom_detached_camera = false
 }
 
 misc {
@@ -274,29 +275,27 @@ bind = $mod ALT, o, exec, /opt/oblivion-desktop/oblivion-desktop --no-sandbox --
 ############################################################
 # WINDOW RULES
 ############################################################
-windowrule = float, class:^(mpv)$
-windowrule = pin, class:^(mpv)$
-windowrule = float, class:^(thunar)$
-windowrule = float, class:^(org.pulseaudio.pavucontrol)$
-windowrule = float, class:^(qalculate-gtk)$
-windowrule = float, class:^(macro-menu)$
-windowrule = float, class:^(emoji-menu)$
-windowrule = float, class:^(qalculate-terminal)$
-windowrule = float, class:^(com.github.hluk.copyq)$
-windowrule = float, class:^(launcher-menu)$
-windowrule = workspace 1, class:^(xvpn)$
-windowrule = workspace 2, class:^(markdown-notes)$
-windowrule = workspace 3, class:^(firefox)$
-windowrule = float, class:^(firefox)$, title:^(Picture-in-Picture)$
-windowrule = pin, class:^(firefox)$, title:^(Picture-in-Picture)$
-windowrule = workspace 6, class:^(org.telegram.desktop)$
-windowrule = float, fullscreen, class:^(org.telegram.desktop)$, title:^(Media viewer)$
-windowrule = workspace 7, class:^(MongoDB Compass)$
-windowrule = workspace 8, class:^(Postman)$
-windowrule = workspace 8, class:^(Altair GraphQL Client)$
-windowrule = workspace 9, title:^(ncmpcpp)$
-windowrule = workspace 10, class:^(Netsoft-com.netsoft.hubstaff)$
-windowrule = workspace 10, class:^(fitimer)$
+windowrule = match:class ^(mpv)$, float on, pin on
+windowrule = match:class ^(thunar)$, float on
+windowrule = match:class ^(org.pulseaudio.pavucontrol)$, float on
+windowrule = match:class ^(qalculate-gtk)$, float on
+windowrule = match:class ^(macro-menu)$, float on
+windowrule = match:class ^(emoji-menu)$, float on
+windowrule = match:class ^(qalculate-terminal)$, float on
+windowrule = match:class ^(com.github.hluk.copyq)$, float on
+windowrule = match:class ^(launcher-menu)$, float on
+windowrule = match:class ^(xvpn)$, workspace 1
+windowrule = match:class ^(markdown-notes)$, workspace 2
+windowrule = match:class ^(firefox)$, workspace 3
+windowrule = match:class ^(firefox)$, match:title ^(Picture-in-Picture)$, float on, pin on
+windowrule = match:class ^(org.telegram.desktop)$, workspace 6
+windowrule = match:class ^(org.telegram.desktop)$, match:title ^(Media viewer)$, float on, fullscreen on
+windowrule = match:class ^(MongoDB Compass)$, workspace 7
+windowrule = match:class ^(Postman)$, workspace 8
+windowrule = match:class ^(Altair GraphQL Client)$, workspace 8
+windowrule = match:title ^(ncmpcpp)$, workspace 9
+windowrule = match:class ^(Netsoft-com.netsoft.hubstaff)$, workspace 10
+windowrule = match:class ^(fitimer)$, workspace 10
 
 ############################################################
 # ENV VARS
