--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,7 @@
-preload = ~/Pictures/wallpaper.jpeg
-wallpaper = ,~/Pictures/wallpaper.jpeg
+splash = false
+
+wallpaper {
+    monitor =
+    path = ~/Pictures/wallpaper.jpeg
+    fit_mode = cover
+}
