feat(waybar): use custom module for volume

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -207,12 +207,12 @@ bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
 # volume
-bindl = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-bindl = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
-bindl = $mod ALT, i, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-bindl = $mod ALT, k, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
-bindl = $mod ALT, mouse_down, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-bindl = $mod ALT, mouse_up, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+bindl = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+; pkill -SIGRTMIN+7 waybar
+bindl = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-; pkill -SIGRTMIN+7 waybar
+bindl = $mod ALT, i, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+; pkill -SIGRTMIN+7 waybar
+bindl = $mod ALT, k, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-; pkill -SIGRTMIN+7 waybar
+bindl = $mod ALT, mouse_down, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+; pkill -SIGRTMIN+7 waybar
+bindl = $mod ALT, mouse_up, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-; pkill -SIGRTMIN+7 waybar
 
 # music control
 bindl = $mod ALT, period, exec, mpc next; pkill -SIGRTMIN+11 waybar
