feat: use satty for screenshots

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -238,9 +238,8 @@ gesture = 3, up, dispatcher, exec, hyprctl keyword cursor:zoom_factor 3
 gesture = 3, down, dispatcher, exec, hyprctl keyword cursor:zoom_factor 1
 
 
-bind = $mod, x, exec, hyprshot -m region --silent --clipboard-only
-bind = $mod SHIFT, x, exec, hyprshot -m output --silent --clipboard-only
-bind = $mod ALT, x, exec, hyprshot -m region --silent -o ~/Pictures
+bind = $mod, x, exec, grim -g "$(slurp)" -t ppm - | satty --filename -
+bind = $mod ALT, x, exec, grim -g "$(slurp -o -r)" -t ppm - | satty --filename -
 
 # notification
 bind = $mod CTRL, space, exec, dunstctl close
